--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "cross-env": "^7.0.3",
     "element-plus": "^2.4.4",
+    "husky": "^8.0.3",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5"
   },
@@ -27,7 +29,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "prettier": "3.1.1"
   },
   "eslintConfig": {
     "root": true,
@@ -41,7 +44,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
