--- a/package.json
+++ b/package.json
@@ -1,52 +1,26 @@
 {
   "name": "tripwise_manage_settlement",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "prepare": "husky install",
-    "dev": "cross-env NODE_ENV=development vue-cli-service serve --mode fat",
-    "dev:uat": "cross-env NODE_ENV=development vue-cli-service serve --mode uat",
-    "dev:outuat": "cross-env NODE_ENV=development vue-cli-service serve --mode outuat",
-    "dev:prod": "cross-env NODE_ENV=development vue-cli-service serve --mode production",
-    "build:fat": "cross-env NODE_ENV=production vue-cli-service build --mode fat",
-    "build:uat": "cross-env NODE_ENV=production vue-cli-service build --mode uat",
-    "build:outuat": "cross-env NODE_ENV=production vue-cli-service build --mode outuat",
-    "build": "cross-env NODE_ENV=production vue-cli-service build --mode production",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
+    "axios": "^1.6.3",
     "element-plus": "^2.4.4",
-    "vue": "^3.2.13",
-    "vue-router": "^4.2.5"
+    "pinia": "^2.1.7",
+    "vue": "^3.3.11",
+    "vue-router": "4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "@types/node": "^20.10.6",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "less": "^4.2.0",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8",
+    "vue-tsc": "^1.8.25"
+  }
 }
