--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "less": "^4.2.0",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.3",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
   }
