--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"element-plus": "^2.4.4",
 		"nprogress": "^0.2.0",
 		"pinia": "^2.1.7",
+		"pinia-plugin-persistedstate": "^3.2.1",
 		"vue": "^3.3.11",
 		"vue-router": "4"
 	},
