--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite",
 		"build": "vue-tsc && vite build",
 		"preview": "vite preview",
-		"lint": "eslint src",
+		"lint": "eslint src --ext .js,.vue,.ts",
 		"fix": "eslint src --fix",
 		"format": "prettier --write \"./**/*.{html,vue,js,ts,json,md}\" ",
 		"prepare": "husky install",
