feat: 增加环境变量

--- a/.env.fat
+++ b/.env.fat
@@ -1,8 +1,3 @@
-VUE_APP_BASE_API = 'https://fat.ceekeeapi.com/'
+VITE_PUBLIC_PATH = /
 
-#  micro service pc.ceekee.com fat url
-VUE_APP_MICROSERVICE_PC_URL = 'https://fatpc.ceekee.com/'
-
-VUE_APP_MICROSERVICE_SCGY_URL = 'https://manage-configurationtest.ceekee.com'
-
-VUE_APP_MICROSERVICE_SETTEMENT_URL = 'https://manage-settment.ceekee.com'
+VITE_BASE_API = 'https://fat.ceekeeapi.com/tripwise/'
