--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,5 @@
-VUE_APP_BASE_API = 'https://api.ceekeeapi.com/'
+# 线上环境项目打包路径
+VITE_PUBLIC_PATH = /
 
-#  micro service pc.ceekee.com production url
-VUE_APP_MICROSERVICE_PC_URL = 'https://pc.ceekee.com/'
+VITE_BASE_API = 'https://api.ceekeeapi.com/tripwise/'
 
-VUE_APP_MICROSERVICE_SCGY_URL = 'https://manage-configuration.ceekee.com'
-
-VUE_APP_MICROSERVICE_SETTEMENT_URL = 'https://manage-settment.ceekee.com'
