--- a/.env.uat
+++ b/.env.uat
@@ -1,6 +1,3 @@
-VUE_APP_BASE_API = 'https://uat.ceekeeapi.com/'
+VITE_PUBLIC_PATH = /
 
-#  micro service pc.ceekee.com uat url
-VUE_APP_MICROSERVICE_PC_URL = 'https://uatpc.ceekee.com/'
-
-VUE_APP_MICROSERVICE_SCGY_URL = 'https://manage-configurationuat.ceekee.com'
+VITE_BASE_API = 'https://uat.ceekeeapi.com/tripwise/'
