--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
 	"name": "tripwise_manage_settlement",
 	"private": true,
 	"version": "0.0.0",
+	"description": "vue + vite + ts + pinia + element-plus",
+	"author": "wangbing <wangbing920803@gmail.com>",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
-		"build": "vue-tsc && vite build",
+		"dev": "vite --mode fat",
+		"dev:uat": "vite --mode uat",
+		"dev:outuat": "vite --mode outuat",
+		"dev:prod": "vite --mode prod",
+		"build": "vite build --mode fat",
+		"build:uat": "vite build --mode uat",
+		"build:outuat": "vite build --mode outuat",
+		"build:prod": "vite build --mode prod",
 		"preview": "vite preview",
 		"lint": "eslint src --ext .js,.vue,.ts",
 		"fix": "eslint src --fix",
