feat: 联通microApp基座与子应用

--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-#  micro service pc.ceekee.com local url
-VUE_APP_MICROSERVICE_PC_LOCAL_URL = 'http://localhost:8888/'
-VUE_APP_MICROSERVICE_SCGY_LOCAL_URL = 'http://localhost:5173/'
-VUE_APP_MICROSERVICE_SETTLEMENT_LOCAL_URL = 'http://localhost:5173/'
+VITE_PORT = 7038
+VITE_PUBLIC_PATH = /
