--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
 	"author": "wangbing <wangbing920803@gmail.com>",
 	"type": "module",
 	"scripts": {
-		"dev": "vite --mode fat",
+		"dev:fat": "vite --mode fat",
 		"dev:uat": "vite --mode uat",
 		"dev:outuat": "vite --mode outuat",
-		"dev:prod": "vite --mode prod",
-		"build": "vite build --mode fat",
+		"dev": "vite --mode prod",
+		"build:fat": "vite build --mode fat",
 		"build:uat": "vite build --mode uat",
 		"build:outuat": "vite build --mode outuat",
-		"build:prod": "vite build --mode prod",
+		"build": "vite build --mode prod",
 		"preview": "vite preview",
 		"lint": "eslint src --ext .js,.vue,.ts",
 		"fix": "eslint src --fix",
