--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.3",
+    "dayjs": "^1.11.10",
     "element-plus": "^2.4.4",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
