--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.3",
     "element-plus": "^2.4.4",
+    "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
