--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.6.3",
     "dayjs": "^1.11.10",
     "element-plus": "^2.4.4",
+    "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
@@ -52,6 +53,7 @@
     "unplugin-auto-import": "^0.17.3",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.8",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.25"
   }
 }
